Initial 56FL001 Radio Website test

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,9 +4,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+  <meta name="author" content="56FL001 Timo">
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+    <script>
+    if (document.documentElement.clientWidth > 800) {
+    var oHead = document.getElementsByTagName('HEAD').item(0);
+    var oScript= document.createElement("script");
+    oScript.type = "text/javascript";
+    oScript.src="/nicetitle.js";
+    oHead.appendChild(oScript);
+
+    var oStyle= document.createElement("link");
+    oStyle.rel = "stylesheet";
+    oStyle.type = "text/css";
+    oStyle.href="/nicetitle.css";
+    oHead.appendChild(oStyle);
+    }
+    </script>
 </head>
