--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,23 @@
+<div id="header" role="banner">
+<div style="display: inline;">
+<a href="/"><img src="/images/56fl001-timos.png" alt="56FL001's Radio Website"></a>
+</div>
+</div>
+
+<!-- cssmenubuilder.com menu -->
+<div class="breadcrumb" role="navigation" style="float: left;">  <span class="left"></span>
+  <ul>
+    <li><a href="/" title="Main Page">Main Page</a></li>
+    <li><a href="/station.php" title="Some Info About my Station">Info About my Station</a></li>
+    <li><a href="/vaasa.php" title="Information About my City Vaasa">My City</a></li>
+    <li><a href="/qsls.php" title="Some Received QSL Cards">Received QSLs</a></li>
+    <li><a href="/downloads.php" title="Some Radio Related Files">Downloads</a></li>
+    <li><a href="/links.php" title="Links to Other Radio Related Websites">Links</a></li>  </ul>
+  <span class="right"></span>
+</div>
+
+
+<!--
 <header class="site-header">
 
   <div class="wrapper">
@@ -25,3 +45,4 @@
   </div>
 
 </header>
+-->
