--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
-<html>
+<!--[if lt IE 7]> <html lang="en" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]> <html lang="en" class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]> <html lang="en" class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
 
   {% include head.html %}
 
   <body>
 
+    <div id="wrapper">
+
     {% include header.html %}
 
-    <div class="page-content">
-      <div class="wrapper">
+    <div id="content" role="main">
+
+    <div class="trans_box2" style="margin: 0px auto auto; width: 75%;">
+
+      <div class="content-inner">
         {{ content }}
       </div>
     </div>
+    </div>
+
+    </div> <!-- #wrapper -->
 
     {% include footer.html %}
 
