Added {{ site.baseurl }} to links in header and footer

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,18 +1,18 @@
 <div id="header" role="banner">
 <div style="display: inline;">
-<a href="/"><img src="/images/56fl001-timos.png" alt="56FL001's Radio Website"></a>
+<a href="{{ site.baseurl }}"><img src="{{ site.baseurl }}/images/56fl001-timos.png" alt="56FL001's Radio Website"></a>
 </div>
 </div>
 
 <!-- cssmenubuilder.com menu -->
 <div class="breadcrumb" role="navigation" style="float: left;">  <span class="left"></span>
   <ul>
-    <li><a href="/" title="Main Page">Main Page</a></li>
-    <li><a href="/station.php" title="Some Info About my Station">Info About my Station</a></li>
-    <li><a href="/vaasa.php" title="Information About my City Vaasa">My City</a></li>
-    <li><a href="/qsls.php" title="Some Received QSL Cards">Received QSLs</a></li>
-    <li><a href="/downloads.php" title="Some Radio Related Files">Downloads</a></li>
-    <li><a href="/links.php" title="Links to Other Radio Related Websites">Links</a></li>  </ul>
+    <li><a href="{{ site.baseurl }}" title="Main Page">Main Page</a></li>
+    <li><a href="{{ site.baseurl }}/station.php" title="Some Info About my Station">Info About my Station</a></li>
+    <li><a href="{{ site.baseurl }}/vaasa.php" title="Information About my City Vaasa">My City</a></li>
+    <li><a href="{{ site.baseurl }}/qsls.php" title="Some Received QSL Cards">Received QSLs</a></li>
+    <li><a href="{{ site.baseurl }}/downloads.php" title="Some Radio Related Files">Downloads</a></li>
+    <li><a href="{{ site.baseurl }}/links.php" title="Links to Other Radio Related Websites">Links</a></li>  </ul>
   <span class="right"></span>
 </div>
 
