--- a/css/main.scss
+++ b/css/main.scss
@@ -271,7 +271,7 @@ iframe {
 
     /* Multi-background supporting browsers */
     // First background image is on top: http://css-tricks.com/stacking-order-of-multiple-backgrounds/
-    background: url('{{ site.baseurl }}/images/Earth-07052014.png') right top no-repeat, url('images/footer-bg.jpg') center center repeat;
+    background: url('{{ site.baseurl }}/images/Earth-07052014.png') right top no-repeat, url('{{ site.baseurl }}/images/footer-bg.jpg') center center repeat;
 }
 
 
@@ -324,7 +324,7 @@ iframe {
 .breadcrumb{position:relative; height:30px; width:100%; background: #000; }
 .breadcrumb ul{position:relative; margin:0 5px 0 5px; padding:0; height:30px; background:url('{{ site.baseurl }}/breadcrumbImage.png') 0px -30px repeat-x; }
 .breadcrumb ul li{padding:0; margin:0; list-style:none; float:left; height:30px; display:inline;}
-.breadcrumb ul li a{font: 14px 'Open Sans', sans-serif; /* Arial, Helvetica, sans-serif; */ color:rgb(255,255,255); text-decoration:none; line-height:30px; display:block; background:url('breadcrumbImage.png') 100% -60px no-repeat; padding:0 17px 0 15px; }
+.breadcrumb ul li a{font: 14px 'Open Sans', sans-serif; /* Arial, Helvetica, sans-serif; */ color:rgb(255,255,255); text-decoration:none; line-height:30px; display:block; background:url('{{ site.baseurl }}/breadcrumbImage.png') 100% -60px no-repeat; padding:0 17px 0 15px; }
 .breadcrumb ul li a:hover {text-decoration:none; color:rbg(255,255,255);}
 .breadcrumb ul li a.active{background:none; color:rgb(255,255,255);}
 .breadcrumb ul li a.active:hover {text-decoration:none;}
@@ -363,7 +363,7 @@ iframe {
     margin:30px;
     border:solid 1px #ccc; // oli #555 07-05-2014
     /* Mozilla ignores crazy MS image filters, so it will skip the following */
-    filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(enabled=true, sizingMethod=scale, src='images/75p_white_55p.png');
+    filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(enabled=true, sizingMethod=scale, src='{{ site.baseurl }}/images/75p_white_55p.png');
 }
 /* IE ignores styles with [attributes], so it will skip the following. */
 .trans_box2[class] {
