--- a/_sass/_icomoon.scss
+++ b/_sass/_icomoon.scss
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?-65owxn');
-	src:url('fonts/icomoon.eot?#iefix-65owxn') format('embedded-opentype'),
-		url('fonts/icomoon.woff?-65owxn') format('woff'),
-		url('fonts/icomoon.ttf?-65owxn') format('truetype'),
-		url('fonts/icomoon.svg?-65owxn#icomoon') format('svg');
+	src:url('../fonts/icomoon.eot?-65owxn');
+	src:url('../fonts/icomoon.eot?#iefix-65owxn') format('embedded-opentype'),
+		url('../fonts/icomoon.woff?-65owxn') format('woff'),
+		url('../fonts/icomoon.ttf?-65owxn') format('truetype'),
+		url('../fonts/icomoon.svg?-65owxn#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
