--- a/_sass/_sansation.scss
+++ b/_sass/_sansation.scss
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'sansationregular';
-    src: url('fonts/Sansation-Regular-webfont.eot');
-    src: url('fonts/Sansation-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/Sansation-Regular-webfont.woff') format('woff'),
-         url('fonts/Sansation-Regular-webfont.ttf') format('truetype'),
-         url('fonts/Sansation-Regular-webfont.svg#sansationregular') format('svg');
+    src: url('../fonts/Sansation-Regular-webfont.eot');
+    src: url('../fonts/Sansation-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Sansation-Regular-webfont.woff') format('woff'),
+         url('../fonts/Sansation-Regular-webfont.ttf') format('truetype'),
+         url('../fonts/Sansation-Regular-webfont.svg#sansationregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
