--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
 <div class="breadcrumb" role="navigation" style="float: left;">  <span class="left"></span>
   <ul>
     <li><a href="{{ site.baseurl }}" title="Main Page">Main Page</a></li>
-    <li><a href="{{ site.baseurl }}/station.php" title="Some Info About my Station">Info About my Station</a></li>
+    <li><a href="{{ site.baseurl }}/station.html" title="Some Info About my Station">Info About my Station</a></li>
     <li><a href="{{ site.baseurl }}/vaasa.php" title="Information About my City Vaasa">My City</a></li>
     <li><a href="{{ site.baseurl }}/qsls.php" title="Some Received QSL Cards">Received QSLs</a></li>
     <li><a href="{{ site.baseurl }}/downloads.php" title="Some Radio Related Files">Downloads</a></li>
