--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
     <li><a href="{{ site.baseurl }}/station" title="Some Info About my Station">Info About my Station</a></li>
     <li><a href="{{ site.baseurl }}/vaasa" title="Information About my City Vaasa">My City</a></li>
     <li><a href="{{ site.baseurl }}/qsls" title="Some Received QSL Cards">Received QSLs</a></li>
-    <li><a href="{{ site.baseurl }}/downloads" title="Some Radio Related Files">Downloads</a></li>
+    <li><a href="{{ site.baseurl }}/files" title="Some Radio Related Files">Downloads</a></li>
     <li><a href="{{ site.baseurl }}/links" title="Links to Other Radio Related Websites">Links</a></li>  </ul>
   <span class="right"></span>
 </div>
