Some divs changed to HTML5 elements (header, nav, footer)

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,11 @@
-<div id="header" role="banner">
+<header id="header" role="banner">
 <div style="display: inline;">
 <a href="{{ site.baseurl }}"><img src="{{ site.baseurl }}/images/56fl001-timos.png" alt="56FL001's Radio Website"></a>
 </div>
-</div>
+</header>
 
 <!-- cssmenubuilder.com menu -->
-<div class="breadcrumb" role="navigation" style="float: left;">  <span class="left"></span>
+<nav class="breadcrumb" role="navigation" style="float: left;">  <span class="left"></span>
   <ul>
     <li><a href="{{ site.baseurl }}" title="Main Page">Main Page</a></li>
     <li><a href="{{ site.baseurl }}/station" title="Some Info About my Station">Info About my Station</a></li>
@@ -14,7 +14,7 @@
     <li><a href="{{ site.baseurl }}/files" title="Some Radio Related Files">Downloads</a></li>
     <li><a href="{{ site.baseurl }}/links" title="Links to Other Radio Related Websites">Links</a></li>  </ul>
   <span class="right"></span>
-</div>
+</nav>
 
 
 <!--
