Commented out some unnecessary HTML

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
 <i class="fallback">&uarr;</i>
 </a>
 </footer>
-
+{% comment %}
 <!--
 <footer class="site-footer">
 
@@ -48,3 +48,4 @@
 
 </footer>
 -->
+{% endcomment %}
