Commented out some unnecessary HTML

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
   <span class="right"></span>
 </nav>
 
-
+{% comment %}
 <!--
 <header class="site-header">
 
@@ -46,3 +46,4 @@
 
 </header>
 -->
+{% endcomment %}
