--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>{% if page.title %}{{ page.title }} &ndash; 56FL001 {% else %}{{ site.title }}{% endif %}</title>
+
+  <link rel="dns-prefetch" href="//fonts.googleapis.com">
+  
   <meta name="author" content="56FL001 Timo">
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
@@ -16,11 +19,10 @@
   <meta name="twitter:site" content="@56fl001">
   <meta name="twitter:domain" content="56fl001.fldx.org">
   <meta name="twitter:creator" content="@56fl001">
-  <meta name="twitter:title" content="{{ page.title }} &ndash; 56FL001">
+  <meta name="twitter:title" content="{% if page.title %}{{ page.title }} &ndash; 56FL001 {% else %}{{ site.title }}{% endif %}">
   {% comment %}
   <meta name="twitter:image:src" content="/logo.png">
   {% endcomment %}
-
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
