Minor code fixes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,51 +1,9 @@
-<footer id="footer">
-<span id="social"><a href="http://twitter.com/56FL001" title="56FL001 on Twitter"><span class="icon-twitter"></span></a> <a href="http://www.facebook.com/groups/130326428266/" title="Foxtrot Lima DX Group in Facebook"><span class="icon-facebook"></span></a> <a href="http://www.youtube.com/user/56FL001" title="56FL001 on Youtube"><span class="icon-youtube"></span></a> <a href="http://www.flickr.com/photos/124505319@N05/" title="56FL001 on Flickr"><span class="icon-flickr"></span></a></span> &copy; <a href="{{ site.baseurl }}/contact" id="contact">56FL001 Timo</a> 2011&ndash;{{ 'now' | date: "%Y" }}<!--
-<span id="madewith"><a href="http://www.sublimetext.com/" target="_blank"><img src="/images/st2.png" alt="Made With Sublime Text 2"></a> <a href="http://www.gimp.org/" target="_blank"><img src="/images/wilber_painter_s.png" alt="Graphics by Gimp"></a></span>
--->
-<a href="#wrapper" id="to-top">
-<i class="icon-angle-up icon-arrow-up"><!-- &#708; --></i>
-<i class="fallback">&uarr;</i>
-</a>
+<footer class="site-footer" id="footer">
+  <span id="social"><a href="http://twitter.com/56FL001" title="56FL001 on Twitter"><span class="icon-twitter"></span></a> <a href="http://www.facebook.com/groups/130326428266/" title="Foxtrot Lima DX Group in Facebook"><span class="icon-facebook"></span></a> <a href="http://www.youtube.com/user/56FL001" title="56FL001 on Youtube"><span class="icon-youtube"></span></a> <a href="http://www.flickr.com/photos/124505319@N05/" title="56FL001 on Flickr"><span class="icon-flickr"></span></a></span> &copy; <a href="{{ site.baseurl }}/contact" id="contact">56FL001 Timo</a> 2011&ndash;{{ 'now' | date: "%Y" }}{% comment %}<!--
+  <span id="madewith"><a href="http://www.sublimetext.com/" target="_blank"><img src="/images/st2.png" alt="Made With Sublime Text 2"></a> <a href="http://www.gimp.org/" target="_blank"><img src="/images/wilber_painter_s.png" alt="Graphics by Gimp"></a></span>
+-->{% endcomment %}
+  <a href="#header" id="to-top">
+    <i class="icon-angle-up icon-arrow-up"><!-- &#708; --></i>
+    <i class="fallback">&uarr;</i>
+  </a>
 </footer>
-{% comment %}
-<!--
-<footer class="site-footer">
-
-  <div class="wrapper">
-
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
-
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
-      </div>
-    </div>
-
-  </div>
-
-</footer>
--->
-{% endcomment %}
