--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,29 +3,24 @@
 <!--[if IE 7]> <html lang="en" class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]> <html lang="en" class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
+{% include head.html %}
+<body>
 
-  {% include head.html %}
+<div id="wrapper">
 
-  <body>
+{% include header.html %}
+<main id="content" role="main">
 
-    <div id="wrapper">
+<div class="transp-bg">
 
-    {% include header.html %}
+<div class="content-inner">
+{{ content }}
+</div>
+</div>
+</main>
 
-    <div id="content" role="main">
+</div> <!-- #wrapper -->
 
-    <div class="trans_box2" style="margin: 0px auto auto; width: 75%;">
-
-      <div class="content-inner">
-        {{ content }}
-      </div>
-    </div>
-    </div>
-
-    </div> <!-- #wrapper -->
-
-    {% include footer.html %}
-
-  </body>
-
+{% include footer.html %}
+</body>
 </html>
