--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,17 +1,17 @@
 <header class="site-header" id="header" role="banner">
 <div style="display: inline;">
-<a href="{{ site.baseurl }}"><img src="{{ site.baseurl }}/images/56fl001-timos.png" alt="56FL001's Radio Website"></a>
+<a href="{{ site.url }}"><img src="{{ site.url }}/images/56fl001-timos.png" alt="56FL001's Radio Website"></a>
 </div>
 </header>
 {% comment %}<!-- cssmenubuilder.com menu -->{% endcomment %}
 <nav class="site-nav breadcrumb" role="navigation" style="float: left;">  <span class="left"></span>
   <ul>
-    <li><a href="{{ site.baseurl }}" title="Main Page">Main Page</a></li>
-    <li><a href="{{ site.baseurl }}/station" title="Some Info About my Station">Info About my Station</a></li>
-    <li><a href="{{ site.baseurl }}/vaasa" title="Information About my City Vaasa">My City</a></li>
-    <li><a href="{{ site.baseurl }}/qsls" title="Some Received QSL Cards">Received QSLs</a></li>
-    <li><a href="{{ site.baseurl }}/files" title="Some Radio Related Files">Downloads</a></li>
-    <li><a href="{{ site.baseurl }}/links" title="Links to Other Radio Related Websites">Links</a></li>
+    <li><a href="{{ site.url }}" title="Main Page">Main Page</a></li>
+    <li><a href="{{ site.url }}/station" title="Some Info About my Station">Info About my Station</a></li>
+    <li><a href="{{ site.url }}/vaasa" title="Information About my City Vaasa">My City</a></li>
+    <li><a href="{{ site.url }}/qsls" title="Some Received QSL Cards">Received QSLs</a></li>
+    <li><a href="{{ site.url }}/files" title="Some Radio Related Files">Downloads</a></li>
+    <li><a href="{{ site.url }}/links" title="Links to Other Radio Related Websites">Links</a></li>
   </ul>
   <span class="right"></span>
 </nav>
