--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,3 +7,18 @@
     <i class="fallback">&uarr;</i>
   </a>
 </footer>
+
+<script>
+    if (document.documentElement.clientWidth > 800) {
+    var oHead = document.getElementsByTagName('HEAD').item(0);
+    var oScript= document.createElement("script");
+    oScript.type = "text/javascript";
+    oScript.src="nicetitle.js";
+    oHead.appendChild(oScript);
+    var oStyle= document.createElement("link");
+    oStyle.rel = "stylesheet";
+    oStyle.type = "text/css";
+    oStyle.href="nicetitle.css";
+    oHead.appendChild(oStyle);
+    }
+</script>
