--- a/css/main.scss
+++ b/css/main.scss
@@ -348,7 +348,7 @@ iframe {
 .breadcrumb ul {position:relative; margin:0; padding:0; height:30px; background:#333; background-image: none;  text-align:center; }
 .breadcrumb ul li{padding:0; margin:0; list-style:none; height:30px; display:inline; float: none;}
 .breadcrumb ul li a{font:14px 'Open Sans', sans-serif; /* Arial, Helvetica, sans-serif; */ color:rgb(255,255,255); text-decoration:none; line-height:30px; display:block; background-image: none; background: #333;  }
-.breadcrumb ul li a:hover {text-decoration:none; border-bottom: 1px solid #fff; color:rbg(255,255,255);}
+.breadcrumb ul li a:hover {text-decoration:none; /* border-bottom: 1px solid #fff; */ color:rbg(255,255,255); background-color: #222; }
 .breadcrumb ul li a.active{background:none; color:rgb(255,255,255);}
 .breadcrumb ul li a.active:hover {text-decoration:none;}
 .breadcrumb .left, .breadcrumb .right { display: none; }
