--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <span id="social"><a href="http://twitter.com/56FL001" title="56FL001 on Twitter"><span class="icon-twitter"></span></a> <a href="http://www.facebook.com/groups/130326428266/" title="Foxtrot Lima DX Group in Facebook"><span class="icon-facebook"></span></a> <a href="http://www.youtube.com/user/56FL001" title="56FL001 on Youtube"><span class="icon-youtube"></span></a> <a href="http://www.flickr.com/photos/124505319@N05/" title="56FL001 on Flickr"><span class="icon-flickr"></span></a></span> &copy; <a href="{{ site.url }}/contact" id="contact">56FL001 Timo</a> 2011&ndash;{{ 'now' | date: "%Y" }}{% comment %}<!--
   <span id="madewith"><a href="http://www.sublimetext.com/" target="_blank"><img src="/images/st2.png" alt="Made With Sublime Text 2"></a> <a href="http://www.gimp.org/" target="_blank"><img src="/images/wilber_painter_s.png" alt="Graphics by Gimp"></a></span>
 -->{% endcomment %}
-  <a href="#header" id="to-top" role="button" aria-label="Back to top of page">
+  <a href="#header" id="to-top" aria-label="Back to top of page">
     <i class="icon-angle-up icon-arrow-up"><!-- &#708; --></i>
     <i class="fallback">&uarr;</i>
   </a>
