--- a/css/main.scss
+++ b/css/main.scss
@@ -568,7 +568,7 @@ main ul {
 
 /* Print styles */
 
-media print {
+@media print {
   * { background: transparent !important; color: black !important; text-shadow: none !important; filter:none !important; -ms-filter: none !important; } /* Black prints faster: h5bp.com/s */
   a, a:visited { text-decoration: underline; }
   a[href]:after { content: " (" attr(href) ")"; }
