.content-inner width 100% for print

--- a/css/main.scss
+++ b/css/main.scss
@@ -582,6 +582,12 @@ main ul {
   @page { margin: 0.5cm; }
   p, h2, h3 { orphans: 3; widows: 3; }
   h2, h3 { page-break-after: avoid; }
+  
+    .content-inner {
+          width: 100%;
+          max-width: 100%;
+    }
+    
     #to-top {
         display: none;
     }   
