Added / to nicetitle.js and .css links so they work from anywhere (404 pages)

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,12 +13,12 @@
   var oHead = document.getElementsByTagName('HEAD').item(0);
   var oScript= document.createElement("script");
   oScript.type = "text/javascript";
-  oScript.src="nicetitle.js";
+  oScript.src="/nicetitle.js";
   oHead.appendChild(oScript);
   var oStyle= document.createElement("link");
   oStyle.rel = "stylesheet";
   oStyle.type = "text/css";
-  oStyle.href="nicetitle.css";
+  oStyle.href="/nicetitle.css";
   oHead.appendChild(oStyle);
   }
 </script>
