--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,10 +18,12 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@56fl001">
   <meta name="twitter:domain" content="56fl001.fldx.org">
+  <meta name="twitter:url" property="og:url" content="http://56fl001.fldx.org">
   <meta name="twitter:creator" content="@56fl001">
-  <meta name="twitter:title" content="{% if page.title %}{{ page.title }} &ndash; 56FL001 {% else %}{{ site.title }}{% endif %}">
+  <meta name="twitter:title" property="og:title" content="{% if page.title %}{{ page.title }} &ndash; 56FL001 {% else %}{{ site.title }}{% endif %}">
+  <meta name="twitter:description" property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
   {% comment %}
-  <meta name="twitter:image:src" content="/logo.png">
+  <meta name="twitter:image" property="og:image" content="/logo.png">
   {% endcomment %}
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">{% comment %}
