--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,9 +22,8 @@
   <meta name="twitter:creator" content="@56fl001">
   <meta name="twitter:title" property="og:title" content="{% if page.title %}{{ page.title }} &ndash; 56FL001 {% else %}{{ site.title }}{% endif %}">
   <meta name="twitter:description" property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-  {% comment %}
-  <meta name="twitter:image" property="og:image" content="/logo.png">
-  {% endcomment %}
+  <meta name="twitter:image" property="og:image" content="/images/56fl001_banner.gif">
+  
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">{% comment %}
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">{% endcomment %}
