Changed Twitter Card type from summary to summary_large_image

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.1.0/respond.min.js"></script>
   <![endif]-->
 
-  <meta name="twitter:card" content="summary">
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@56fl001">
   <meta name="twitter:domain" content="56fl001.fldx.org">
   <meta name="twitter:url" property="og:url" content="http://56fl001.fldx.org">
