--- a/css/main.scss
+++ b/css/main.scss
@@ -451,6 +451,7 @@ caption overlapping figure http://codepen.io/adobe/pen/bhoGK
   background-color: rgba(38,50,72, 0.5);
 }
 
+/* Do not overlap the caption on small viewport widths */
 @media screen and (max-width: 800px){
   .overlap-figure .caption { position: static; }
 }
