--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,6 +25,7 @@
   <meta name="twitter:image" property="og:image" content="/images/56fl001_banner.gif">
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">{% comment %}
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">{% endcomment %}
 </head>
