--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,7 +25,24 @@
   <meta name="twitter:image" property="og:image" content="/images/56fl001_banner.gif">
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+  <!--
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300">
+  -->
+  
+  <script>
+    WebFont.load({
+    google: {
+     families: ['Open Sans:300']
+    }
+    });
+
+     (function(d) {
+        var wf = d.createElement('script'), s = d.scripts[0];
+        wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js';
+        s.parentNode.insertBefore(wf, s);
+     })(document);
+  </script>
+
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">{% comment %}
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">{% endcomment %}
 </head>
