Added section.banners for FL banner and QRZ11.com search

--- a/css/main.scss
+++ b/css/main.scss
@@ -500,6 +500,9 @@ main ul {
     border-radius: 15px;
 }
 
+/* Banners on index page */
+.fl-banner { float: left; }
+
 /* Contact form styles */
 #contact-form { margin: 65px 25px; }
 
